
- Issue #2790: sys.flags was not properly exposing its bytes_warning attribute.

- Issue #2196: hasattr now lets exceptions which do not inherit Exception
  (KeyboardInterrupt, and SystemExit) propagate instead of ignoring them

Extension Modules
-----------------

- Support for Windows 9x has been removed from the winsound module.

- bsddb module updated to version 4.6.4.

Library
-------

- The IOCTL module from IRIX has been deprecated for removal in Python 3.0.

- The IN module from IRIX has been deprecated for removal in Python 3.0.

- The imgfile module from IRIX has been deprecated for removal in Python 3.0.

- The GLWS module from IRIX has been deprecated for removal in Python 3.0.

- The GET module from IRIX has been deprecated for removal in Python 3.0.

- The fm module from IRIX has been deprecated for removal in Python 3.0.

- The FL, flp, and fl modules from IRIX have been deprecated for removal in
  Python 3.0.

- The FILE module on IRIX has been deprecated for removal in Python 3.0.

- The ERRNO module on IRIX has been deprecated for removal in Python 3.0.

- The DEVICE, GL, gl, and cgen modules (which indirectly includes cgensupport)
  have been deprecated for removal in Python 3.0.

- The ConfigParser module has been renamed 'configparser'.  The old
  name is now deprecated.

- The CL, CL_old, and cl modules for IRIX have been deprecated for removal in
  Python 3.0.

- The cdplayer module for IRIX has been deprecated for removal in Python 3.0.

- The cddb module for IRIX has been deprecated for removal in Python 3.0.

- The cd and CD modules for IRIX have been deprecated for removal in
  Python 3.0.

- The al and AL modules for IRIX have been deprecated for removal in
  Python 3.0.

- #1713041: fix pprint's handling of maximum depth.

- The timing module has been deprecated for removal in Python 3.0.

- The sv module has been deprecated for removal in Python 3.0.

- The multifile module has been deprecated as per PEP 4.
